src/test/ui/did_you_mean/issue-46836-identifier-not-instead-of-negation.stderr
error: unexpected `for_you` after identifier
  --> $DIR/issue-46836-identifier-not-instead-of-negation.rs:3:12
   |
LL |     if not for_you {
   |        ----^^^^^^^
   |        |
   |        help: use `!` to perform logical negation

error: unexpected `the_worst` after identifier
  --> $DIR/issue-46836-identifier-not-instead-of-negation.rs:11:15
   |
LL |     while not the_worst {
   |           ----^^^^^^^^^
   |           |
   |           help: use `!` to perform logical negation

error: unexpected `println` after identifier
  --> $DIR/issue-46836-identifier-not-instead-of-negation.rs:20:9
   |
LL |     if not  // lack of braces is [sic]
   |        ----- help: use `!` to perform logical negation
LL |         println!("Then when?");
   |         ^^^^^^^

error: expected `{`, found `;`
  --> $DIR/issue-46836-identifier-not-instead-of-negation.rs:20:31
   |
LL |     if not  // lack of braces is [sic]
   |     -- this `if` statement has a condition, but no block
LL |         println!("Then when?");
   |                               ^ expected `{`

error: unexpected `2` after identifier
  --> $DIR/issue-46836-identifier-not-instead-of-negation.rs:26:24
   |
LL |     let resource = not 2;
   |                    ----^
   |                    |
   |                    help: use `!` to perform logical negation

error: unexpected `be_smothered_out_before` after identifier
  --> $DIR/issue-46836-identifier-not-instead-of-negation.rs:32:27
   |
LL |     let young_souls = not be_smothered_out_before;
   |                       ----^^^^^^^^^^^^^^^^^^^^^^^
   |                       |
   |                       help: use `!` to perform logical negation

error: aborting due to 6 previous errors

